overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@
 * {
     scroll-behavior: smooth;
 }
+div{
+    overflow: hidden;
+}
 
 iframe {
     margin-bottom: 250px;
